# neo-perceptorn

./: CMakeLists.txt  Utils.h  main.cpp
data/: Concatenator.cpp  Concatenator.h  ImageParser.cpp  ImageParser.h  LabeledImage.cpp  LabeledImage.h  LabelsParser.cpp  LabelsParser.h
lib/: byteswap.h
nodes/: SLayer.cpp  SLayer.h  SPane.cpp  SPane.h  VNode.cpp  VNode.h
